# MYSpolly

./: .gitignore  ASSETS_CREDITS.md  MYSpolly.md  README.md  eslint.config.js  index.html  package.json  tsconfig.engine.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  desktop.yml
electron/: main.cjs  preload.cjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/ai/: bot.ts  heuristic.ts
src/app/: App.tsx
src/app/animation/: GoodsDelivery.tsx  timelines.ts  useAnimateEvents.ts
src/app/audio/: sound.ts
src/app/components/: ui.tsx
src/app/data/: rules.ts  tutorial.ts
src/app/i18n/: en.json  format.ts  index.ts  ru.json  uz.json
src/app/screens/: Credits.tsx  Game.tsx  GameSetup.tsx  LoadGame.tsx  MainMenu.tsx  PauseMenu.tsx  Results.tsx  Rules.tsx  Settings.tsx  Splash.tsx  Tutorial.tsx
src/app/store/: appStore.ts  settings.ts
src/app/theme/: theme.css
src/app/util/: file.ts
src/core/: index.ts  rng.ts
src/core/data/: board.ts  (+6 more)
src/persistence/: db.ts  save.ts  saveManager.ts  serialize.ts  types.ts
tests/component/: board.test.tsx  boardCamera.test.tsx  rules.test.tsx  setup.ts  turnHandoff.test.tsx  tutorial.test.tsx
tests/types/: node-min.d.ts
tests/unit/: ai.test.ts  data.test.ts  economy.test.ts  engine.test.ts  goodsDelivery.test.ts  i18n.test.ts  mapMorph.test.ts  maps.test.ts  persistence.test.ts  phase11.test.ts  rules.test.ts  rulesContent.test.ts  saveManager.test.ts  scoring.test.ts  smoke.test.ts  tutorialContent.test.ts
(+60 files in other folders)
