[package]
name = "myspolly"
version = "0.1.0"
description = "MYSpolly - Brass: Birmingham desktop edition"
authors = ["MYSpolly project"]
edition = "2021"
rust-version = "1.77"

# The library powers both the binary and (optionally) mobile targets.
[lib]
name = "myspolly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Used by the release bundling pipeline.
custom-protocol = ["tauri/custom-protocol"]
